<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Purrinha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="campeonato_de_purrinha">Campeonato de Purrinha</string>
    <string name="voce">Você</string>
    <string name="total">Total</string>
    <string name="vai">VAI</string>
    <string name="vs">VS</string>
    <string name="resultado">Resultado</string>
    <string name="novo_jogo">Novo Jogo</string>

</resources>
